FIX issues with overlay sizing on mobile

--- a/client/src/components/header/Overlays.css
+++ b/client/src/components/header/Overlays.css
@@ -10,7 +10,7 @@
 }
 
 .info-container {
-    height:80%;
+    max-height:80%;
     width: 60%;
     background-color: white;
     -ms-transform: translateY(15%);
@@ -31,15 +31,17 @@
 }
 
 @media (max-width: 1000px) {
+    #overlay-background {
+        height: calc(100% - 75px);
+    }
+
     .info-container {
         width: 75%;
     }
 }
 
 @media (max-width: 600px) {
-    #overlay-background {
-        height: calc(100% - 75px);
-    }
+    
 
     .info-container {
         width: 90%;
